cmake_minimum_required(VERSION 3.20.0)
project(check_table)
add_subdirectory(nlohmann_json)
add_subdirectory(OpenXLSX/OpenXLSX)
add_subdirectory(xls2xlsx_worker)
add_subdirectory(xls2xlsx_master)
add_subdirectory(calculate_md5)
add_subdirectory(audit_tables_v2)
add_subdirectory(pugixml)
add_subdirectory(AdjustUI)