cmake_minimum_required(VERSION 3.20.0)
project(calculate_md5)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_library(utils STATIC utils/md5.cpp utils/md5file.cpp)
target_include_directories(utils PUBLIC ${PROJECT_SOURCE_DIR}/include)
# set(CMAKE_EXE_LINKER_FLAGS "-static")
add_executable(${PROJECT_NAME} src/main.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE utils)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
